INCLUDES = -I$(top_srcdir)

AUTOMAKE_OPTIONS = foreign

noinst_LIBRARIES = libflash.a

libflash_a_SOURCES = \
	flash.cc \
	character.cc \
	shape.cc \
	button.cc \
	program.cc \
	bitmap.cc \
	displaylist.cc \
	font.cc \
	graphic.cc \
	text.cc \
	matrix.cc \
	script.cc \
	sound.cc \
	sprite.cc \
	movie.cc \
	cxform.cc \
	adpcm.cc \
	sqrt.cc \
	graphic16.cc \
	graphic24.cc \
	graphic32.cc \
\
	jcomapi.c jutils.c jerror.c jmemmgr.c jmemnobs.c \
	jdapimin.c jdapistd.c jdtrans.c jdatasrc.c \
        jdmaster.c jdinput.c jdmarker.c jdhuff.c jdphuff.c \
        jdmainct.c jdcoefct.c jdpostct.c jddctmgr.c \
        jidctfst.c jidctflt.c jidctint.c jidctred.c \
        jdsample.c jdcolor.c jquant1.c jquant2.c jdmerge.c